Fix overlap in footer & add media query

--- a/src/style.css
+++ b/src/style.css
@@ -1,19 +1,22 @@
 body {
+  min-width: 320px;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  overflow: hidden;
 }
 
-.grid-container {
-  height: 100vh;
-  display: grid;
-  grid-template-rows: 10vh 80vh 10vh;
+.flex-container {
+  display: flex;
+  flex-direction: column;
+}
+
+header {
+  text-align: center;
 }
 
 main {
-  display: grid;
-  grid-template-columns: 50% 50%;
+  display: flex;
+  flex-direction: column;
 }
 
 h1,
@@ -23,38 +26,36 @@ button {
 }
 
 h1 {
-  margin: auto;
-  padding-left: 0.2em;
-  font-size: 7rem;
+  font-size: 2.5rem;
 }
 
 .get > h2 {
-  font-size: 4rem;
+  font-size: 1.5rem;
 }
 
 .post > h2 {
   align-self: center;
-  font-size: 2.5rem;
+  font-size: 1.5rem;
 }
 
 .add-score {
-  margin-top: 2rem;
+  order: 1;
   display: flex;
-  align-items: start;
   justify-content: center;
 }
 
 .recent-scores {
-  margin-left: 10em;
+  height: 50vh;
+  order: 2;
+  flex-direction: column;
+  align-items: center;
 }
 
 ol {
-  padding: 0.2em;
+  overflow: scroll;
+  font-size: 1.5rem;
   list-style: none;
   border: 0.2em solid black;
-  overflow: scroll;
-  font-size: 2rem;
-  height: 35vh;
 }
 
 ol li:nth-child(even) {
@@ -63,18 +64,18 @@ ol li:nth-child(even) {
 
 .post {
   width: 50%;
+  margin-bottom: 1rem;
+  gap: 0.5rem;
   flex-direction: column;
-  gap: 2em;
 }
 
 input {
-  padding: 0.5em;
-  font-size: 1.5rem;
+  padding: 0.1em;
+  font-size: 1rem;
 }
 
 button {
-  padding: 0.3em;
-  font-size: 1.8em;
+  font-size: 1rem;
   box-shadow: 0.2em 0.2em;
 }
 
@@ -84,7 +85,6 @@ button {
 }
 
 .get > button {
-  width: 18%;
   align-self: center;
   margin-left: 1em;
 }
@@ -96,6 +96,7 @@ button {
 
 .post,
 .get,
+.recent-scores,
 footer {
   display: flex;
 }
@@ -107,4 +108,57 @@ footer {
   font-size: x-large;
   color: whitesmoke;
   background-color: rgb(176, 115, 233);
+}
+
+@media (min-width: 760px) {
+  main {
+    flex-direction: row;
+  }
+
+  header {
+    text-align: start;
+  }
+
+  h1 {
+    margin-left: 2rem;
+    font-size: 6rem;
+  }
+
+  .add-score {
+    order: 2;
+    width: 50vw;
+  }
+
+  .recent-scores {
+    order: 1;
+    height: 80vh;
+    width: 80vw;
+  }
+
+  .post {
+    width: 90%;
+    gap: 2rem;
+  }
+
+  ol {
+    width: 70%;
+  }
+
+  input {
+    padding: 1rem;
+    font-size: 2rem;
+  }
+
+  button {
+    font-size: 2rem;
+    box-shadow: 0.2em 0.2em;
+  }
+
+  .get > h2 {
+    font-size: 4rem;
+  }
+
+  .post > h2 {
+    font-size: 4rem;
+  }
 }
